# cbugzilla

./: .gitignore  ChangeLog.rst  LICENSE  Makefile  Makefile.am  README.rst  autogen.sh  cbugzilla.pc.in  cgb.c  configure.ac  libcbugzilla.pc.in
include/: _cb.h  bugzilla.h  bugzilla_parser.h  cb.h  cgb.h  cgb_curl.h  cgb_htmltidy.h  cgb_string.h  curl.h  htmltidy.h  string.h
libcbugzilla/: _cb.h  bugzilla.h  bugzilla_parser.h  cb.h  curl.h  string.h
src/: .gitignore  Makefile  bugzilla.c  bugzilla_parser.c  cb.c  cgb.c  curl.c  htmltidy.c  main.c  string.c
test/: Makefile  parser.c  string.c
test/response/: namedcmd.html
